--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
+  syncfusion_flutter_charts: ^28.1.33
 
 dev_dependencies:
   flutter_test:
