--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
   syncfusion_flutter_charts: ^28.1.33
+  table_calendar: ^3.1.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
