--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.5
   pinput: ^5.0.1
+  image_network: ^2.6.0
 
 dev_dependencies:
   flutter_test:
